--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,12 +9,13 @@ lifecycle-runtime-ktx = "2.6.2"
 activity-compose = "1.8.0"
 compose-bom = "2023.10.01"
 coroutines-version = "1.7.3"
-navigation-compose = "2.7.4"
+navigation-compose = "2.7.5"
 retrofit = "2.9.0"
 gson = "2.10.1"
 coil-compose = "2.4.0"
 hilt-version = "2.48"
-hilt-nav-version = "1.0.0"
+hilt-nav-version = "1.1.0"
+lottie-version = "6.0.0"
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -41,6 +42,7 @@ gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt-version" }
 hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt-version" }
 hilt-nav-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hilt-nav-version" }
+lottie = { module = "com.airbnb.android:lottie-compose", version.ref = "lottie-version" }
 
 
 [plugins]
